[gd_scene load_steps=7 format=3 uid="uid://cd4y56l75yr13"]

[ext_resource type="Script" uid="uid://b8qglwa256lg8" path="res://Scripts/Orbit/Orbit.gd" id="1_1fuu5"]
[ext_resource type="Script" uid="uid://dw65305324iwv" path="res://Scripts/Orbit/OrbitOutline.gd" id="2_1fuu5"]
[ext_resource type="Script" uid="uid://b34sml2qw4v2c" path="res://addons/donut_collision_polygon2D/donut_collision_polygon2D.gd" id="2_03wf0"]
[ext_resource type="Texture2D" uid="uid://brj26nhml8sf6" path="res://Sprites/satellite_silhouette.png" id="2_jr2fx"]
[ext_resource type="Script" uid="uid://cook7kkhwn8hg" path="res://Scripts/Orbit/SatelliteTargets.gd" id="4_03wf0"]
[ext_resource type="FontFile" uid="uid://d2wc1u7ejmb4c" path="res://Fonts/Protomolecule.otf" id="5_cnj81"]

[node name="Orbit" type="Area2D" node_paths=PackedStringArray("_orbit_outline", "_satellite_targets")]
script = ExtResource("1_1fuu5")
_orbit_outline = NodePath("Outline")
_satellite_targets = NodePath("SatelliteTargets")
satellite_hop_texture = ExtResource("2_jr2fx")
satellite_hop_color = Color(0.368627, 0.392157, 0.556863, 0.784314)

[node name="Outline" type="Node2D" parent="."]
rotation = 161.886
script = ExtResource("2_1fuu5")

[node name="DonutCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(1.53076e-14, -250, 48.7726, -245.196, 95.6709, -230.97, 138.893, -207.867, 176.777, -176.777, 207.867, -138.893, 230.97, -95.6709, 245.196, -48.7726, 250, 0, 245.196, 48.7726, 230.97, 95.6709, 207.867, 138.893, 176.777, 176.777, 138.893, 207.867, 95.6709, 230.97, 48.7726, 245.196, 1.53076e-14, 250, -48.7726, 245.196, -95.6709, 230.97, -138.893, 207.867, -176.777, 176.777, -207.867, 138.893, -230.97, 95.6709, -245.196, 48.7726, -250, 3.06152e-14, -245.196, -48.7726, -230.97, -95.6709, -207.867, -138.893, -176.777, -176.777, -138.893, -207.867, -95.6709, -230.97, -48.7726, -245.196, -4.59227e-14, -250, -2.75536e-14, -150, -29.2635, -147.118, -57.4025, -138.582, -83.3355, -124.72, -106.066, -106.066, -124.72, -83.3355, -138.582, -57.4025, -147.118, -29.2635, -150, 1.83691e-14, -147.118, 29.2635, -138.582, 57.4025, -124.72, 83.3355, -106.066, 106.066, -83.3355, 124.72, -57.4025, 138.582, -29.2635, 147.118, 9.18455e-15, 150, 29.2635, 147.118, 57.4025, 138.582, 83.3355, 124.72, 106.066, 106.066, 124.72, 83.3355, 138.582, 57.4025, 147.118, 29.2635, 150, 0, 147.118, -29.2635, 138.582, -57.4025, 124.72, -83.3355, 106.066, -106.066, 83.3355, -124.72, 57.4025, -138.582, 29.2635, -147.118, 9.18455e-15, -150, 0.0001, -250)
script = ExtResource("2_03wf0")
radius = 200.0
width = 100.0
metadata/_custom_type_script = "uid://b34sml2qw4v2c"

[node name="SatelliteTargets" type="Node2D" parent="."]
script = ExtResource("4_03wf0")

[node name="Satellites" type="Node2D" parent="."]

[node name="LimitLabel" type="Node2D" parent="."]
z_index = -10
position = Vector2(0, -232)

[node name="Value" type="Label" parent="LimitLabel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -18.5
offset_right = 21.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_cnj81")
theme_override_font_sizes/font_size = 50
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
